--- a/ProjectoEsw/Views/Administrador/Index.cshtml
+++ b/ProjectoEsw/Views/Administrador/Index.cshtml
@@ -4,16 +4,16 @@
 
 }
 @section Home{
-    <a asp-area="" asp-controller="Candidato" asp-action="Index">Home</a>
+    <a asp-area="" asp-controller="Administrador" asp-action="Index">Home</a>
 }
 @section ProgramasMobilidade{
-    <a asp-area="" asp-controller="Candidato" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+    <a asp-area="" asp-controller="Administrador" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
 }
 @section Bolsas{
-    <a asp-area="" asp-controller="Candidato" asp-action="Bolsas">Bolsas</a>
+    <a asp-area="" asp-controller="Administrador" asp-action="Bolsas">Bolsas</a>
 }
 @section SobreNos{
-    <a asp-area="" asp-controller="Candidato" asp-action="SobreNos">Sobre Nós</a>
+    <a asp-area="" asp-controller="Administrador" asp-action="SobreNos">Sobre Nós</a>
 }
 <div id="myCarousel" class="carousel slide col-sm-8" data-ride="carousel" data-interval="9000">
     <ol class="carousel-indicators">
