--- a/ProjectoEsw/Views/Administrador/VerEstatisticas.cshtml
+++ b/ProjectoEsw/Views/Administrador/VerEstatisticas.cshtml
@@ -3,19 +3,19 @@
 }
 
 @section Home{
-    <a asp-area="" asp-controller="Candidato" asp-action="Index">Home</a>
+    <a asp-area="" asp-controller="Administrador" asp-action="Index">Home</a>
 }
 
 @section ProgramasMobilidade{
-    <a asp-area="" asp-controller="Candidato" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+    <a asp-area="" asp-controller="Administrador" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
 }
 
 @section Bolsas{
-    <a asp-area="" asp-controller="Candidato" asp-action="Bolsas">Bolsas</a>
+    <a asp-area="" asp-controller="Administrador" asp-action="Bolsas">Bolsas</a>
 }
 
 @section SobreNos{
-    <a asp-area="" asp-controller="Candidato" asp-action="SobreNos">Sobre Nós</a>
+    <a asp-area="" asp-controller="Administrador" asp-action="SobreNos">Sobre Nós</a>
 }
 
 <!--Home-->
