--- a/ProjectoEsw/Views/Tecnico/SobreNos.cshtml
+++ b/ProjectoEsw/Views/Tecnico/SobreNos.cshtml
@@ -20,8 +20,18 @@
 }
 <!--Home-->
 <div class="jumbotron col-sm-8">
-    <h1>Sobre Nos/h1>
-    <p> Resto Informacao + links</p>
+    <div class="col-sm-12" id="divErasmus" >
+        <h3 class="text-center">Sobre Nós</h3>
+        <div class="help-block"></div>
+        <p><font size="2">  Esta  <strong>WebApp</strong> foi criada para o <strong>CIMOB</strong>, como projecto escolar e para promover e ajudar no processo de candidatura para os programas mobilidade que o <strong>Instituito Politecnico de Setubal</strong> tem para oferecer</font></p>
+        <p><font size="2">  Foi desenvolvida por um grupo de quatro elementro que procedeu a implementação da mesma.</font></p>
+        <p><font size="2">  Estes elementos sao todos alunos de Engenheiria Informatica no IPS/EST, que estao a frequentar as cadeiras de Engenheiria de Software e Programação Visual para o qual este projecto foi desenvolvido</font></p>
+        <p><font size="2">  Os grupo é consistido portanto: </font></p>
+        <p><font size="2">  - <strong>Ricardo Monteiro</strong> - Project Manager</font></p>
+        <p><font size="2">  - <strong>Lidorio Vinagreiro</strong> - Developer </font></p>
+        <p><font size="2">  - <strong>Fernando Azevedo</strong> - Developer </font></p>
+        <p><font size="2">  - <strong>Diogo Marques</strong> - Developer </font></p>
+    </div>
 </div>
 
 <div class="jumbotron col-sm-3 col-sm-offset-1">
